Fixed issue where the display on the Computer View was vertically aligned like the Mobile View, but now they both have separate functionality

--- a/src/NavBarScrolling/NavBarScrolling.css
+++ b/src/NavBarScrolling/NavBarScrolling.css
@@ -56,6 +56,10 @@
     display: none;
 }
 
+.is-mobile-view {
+    display: inline;
+}
+
 /* Hovering over Mobile Nav. Bar will show a different color */
 .mobile-navbar li:hover {
     background-color: lightgrey;
@@ -94,6 +98,10 @@
     }
 
     .show-navbar {
+        display: block;
+    }
+
+    .is-mobile-view {
         display: block;
     }
 }
